Fix link to stin

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         </a>
                     </div>   
                     <div class="content hoverable">
-                        <a href="https://stingames.netlify.app/" target="_blank">
+                        <a href="https://stingames.netlify.app/landing.html" target="_blank">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="/img/stin.png" alt="Stin" width="500px" height="296px">
                             <div class="content-details fadeIn-bottom">
