--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
                         </a>
                     </div>       
                     <div class="content hoverable">
-                        <a href="http://birdomain.herokuapp.com/" target="_blank">
+                        <a href="http://bird-domain.herokuapp.com/" target="_blank">
                             <div class="content-overlay"></div>
                             <img class="content-image" src="/img/bird.png" alt="Bird" width="500px" height="296px">
                             <div class="content-details fadeIn-bottom">
                                 <h4 class="content-title">Birds Domain</h4>
                                 <p class="content-text">MERN (MongoDB, Express.js, React.js and Node.js) Proyect</p>
+                                <h5 class="red-text">Important: The site is on a free server and will take a few minutes to load.</h5>
                             </div>
                         </a>
                     </div>
