--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="professional portfolio of web developer.">
+    <meta name="keywords" content="developer, programador, desarrolador, desarrolador web, web developer, ivo montanari, tucuman, argentina.">
+    <meta name="author" content="Ivo Montanari">
     <title>Ivo's Portfolio</title>
     <!--FontAwesome Icons-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
