--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="professional portfolio of web developer.">
     <meta name="keywords" content="developer, programador, desarrolador, desarrolador web, web developer, ivo montanari, tucuman, argentina.">
     <meta name="author" content="Ivo Montanari">
+    <meta name="robots" content="index">
     <title>Ivo's Portfolio</title>
     <!--FontAwesome Icons-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
