--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="flow-text">
             <h1>Ivo Montanari</h1>
             <h3>Web/Mobile Developer</h3>
-            <p>Hello, thanks for check my portfolio, I'm a Full Stack Web/Mobile Developer. In my portfolio you can find my CV, projectors, skills and contact information.</p>
+            <p>Hello, thanks for check my portfolio, I'm a Full Stack Web/Mobile Developer. In my portfolio you can download my CV, see my projectors, skills and contact information.</p>
         </div>
     </div>
     
@@ -83,7 +83,7 @@
                 </div>
             </li>
             <li>
-                <div class="collapsible-header dark"><i class="material-icons ul-icons">dvr</i>Proyects</div>
+                <div class="collapsible-header dark"><i class="material-icons ul-icons">dvr</i>Projects</div>
                 <div class="collapsible-body c-body">
                     <div class="content hoverable">
                         <a href="https://fitness-tucuman.netlify.app/" target="_blank">
