--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="content hoverable">
                         <a href="https://fitness-tucuman.netlify.app/" target="_blank">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="/img/fitness.png" alt="Stin" width="500px" height="296px">
+                            <img class="content-image" src="/img/fitness.png" alt="Fitness" width="500px" height="296px">
                             <div class="content-details fadeIn-bottom">
                                 <h4 class="content-title">Fitness-Tucuman</h4>
                                 <p class="content-text">HTML & CSS -Bootstrap- Proyect</p>
@@ -143,6 +143,21 @@
                             </div>
                         </a>
                     </div>
+                </div>
+            </li>
+            <li>
+                <div class="collapsible-header dark"><i class="material-icons ul-icons">domain</i>Mini-games</div>
+                <div class="collapsible-body c-body">
+                    <div class="content hoverable">
+                        <a href="https://simonsay.netlify.app/" target="_blank">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="/img/simon.png" alt="Simon" width="500px" height="296px">
+                            <div class="content-details fadeIn-bottom">
+                                <h4 class="content-title">Simon Dice</h4>
+                                <p class="content-text">HTML & CSS -Bootstrap- & Javascript Mini-Game</p>
+                            </div>
+                        </a>
+                    </div>                      
                 </div>
             </li>
             <li>
