Add Ricky and Morty

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
     </div>
     
-    <div class="container menu">
+    <div class=" menu">
         <ul class="collapsible popout" data-collapsible="popout">
             <li>
                 <div class="collapsible-header dark"><i class="material-icons ul-icons">star</i>Goals</div>
@@ -153,7 +153,17 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="/img/simon.png" alt="Simon" width="500px" height="296px">
                             <div class="content-details fadeIn-bottom">
-                                <h4 class="content-title">Simon Dice</h4>
+                                <h4 class="content-title">Simon Say</h4>
+                                <p class="content-text">HTML & CSS -Bootstrap- & Javascript Mini-Game</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="content hoverable">
+                        <a href="https://rps-rickandmorty.netlify.app/" target="_blank">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="/img/rickandmorty.png" alt="Rps" width="500px" height="296px">
+                            <div class="content-details fadeIn-bottom">
+                                <h4 class="content-title">Rock Paper Scissor</h4>
                                 <p class="content-text">HTML & CSS -Bootstrap- & Javascript Mini-Game</p>
                             </div>
                         </a>
