--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="collapsible-body">
                   
                     <h5>Front-end <i class="material-icons li-icons">desktop_windows</i></h5>    
-                    <p>HTML5, CSS3, Javascript, React.js, Ruby, Bootstrap and Material Design.</p>
+                    <p>HTML5, CSS3, Javascript, React.js, Ruby, SASS, Bootstrap and Material Design.</p>
                     
                     <h5>Back-end<i class="material-icons li-icons">code</i></h5>
                     <p>Node.js, Express.js, RESTful API.</p>
