--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="/style2.css">
+    <link rel="stylesheet" href="/style.css">
     <link class="favicon" rel="icon" href="/img/favicon.png">
 </head>
 <body class="dark" id="body">
