--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body class="dark" id="body">
     <!--Float Menu-->
-    <div class="fixed-action-btn" data-aos="fade-down">
+    <div class="fixed-action-btn">
         <a class="btn-floating btn-large floating-menu pulse waves-effect waves-light light">
           <i id="menu" class="large material-icons floating-icon-menu">menu</i>
         </a>
