--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
     </div>
     <!--Title-->
     <div class="container title" id="title">
-        <div class="container-img" data-aos="fade-right">
+        <div class="container-img" data-aos="fade-right" data-aos-once="true">
             <img src="/img/dev.png" alt="Dev" class="dev-img">
         </div>
-        <div class="flow-text" data-aos="fade-left">
+        <div class="flow-text" data-aos="fade-left" data-aos-once="true">
             <h1>Ivo Montanari</h1>
             <h3>Web/Mobile Developer</h3>
             <p id="ph" >Hello, thanks for check my portfolio, I'm a Full Stack Web/Mobile Developer. In my portfolio you can download my CV, see my projects, skills and contact information.</p>
