--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     </div>
     <!--Projects-->
     <div class="row container" >
-        <div class="col s12 m6" data-aos="zoom-in-right" data-aos-anchor="#skills">
+        <div class="col s12 m6" data-aos="zoom-in-right" data-aos-anchor="#skills" data-aos-duration="500">
           <div class="card dark">
             <div class="card-content">
               <span class="card-title">Projects</span>
