--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
         </ul>
     </div>
     <!--Title-->
-    <div class="container title" id="title">
+    <div class="container title" >
         <div class="container-img" data-aos="fade-right" data-aos-once="true">
             <img src="/img/dev.png" alt="Dev" class="dev-img">
         </div>
-        <div class="flow-text overlay" data-aos="fade-left" data-aos-once="true">
+        <div class="flow-text overlay" data-aos="fade-left" data-aos-once="true" id="title">
             <h1>Ivo Montanari</h1>
             <h3>Web/Mobile Developer</h3>
             <p id="ph" >Hello, thanks for check my portfolio, I'm a Full Stack Web/Mobile Developer. In my portfolio you can download my CV, see my projects, skills and contact information.</p>
@@ -77,7 +77,7 @@
     <!--Collapsible Popout-->
     <!-- Goals-->
     <div class="row container goals">
-        <div class="col s12 m6" data-aos="zoom-out-right" id="goals" data-aos-anchor="#ph" data-aos-duration="600">
+        <div class="col s12 m6" data-aos="slide-left" id="goals" data-aos-anchor="#title" data-aos-duration="1000">
           <div class="card dark">
             <div class="card-content">
               <span class="card-title">Goals</span>
