pyhton and Django add

--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
             <div class="card-content">
               <span class="card-title">Skills</span>
               <h5>Front-end <i class="material-icons li-icons">desktop_windows</i></h5>    
-              <p>HTML5, CSS3, Javascript, React.js, Ruby, SASS, Bootstrap and Material Design.</p>
+              <p>HTML5, CSS3, Javascript, React.js, SASS, Bootstrap and Material Design.</p>
               
               <h5>Back-end<i class="material-icons li-icons">code</i></h5>
-              <p>Node.js, Express.js, RESTful API.</p>
+              <p>Node.js, Express.js, Python, Django, Ruby, RESTful API.</p>
 
               <h5>Mobile<i class="material-icons li-icons">phone_android</i></h5>
               <p>React Native/Expo, React Navigation.</p>
@@ -204,7 +204,7 @@
                       <div class="content-overlay"></div>
                       <img class="content-image" src="/img/rickandmorty.png" alt="Rps" >
                       <div class="content-details fadeIn-bottom">
-                          <h6>Only Web</h6>
+                          <h6 class="red-text">Only Web</h6>
                           <h4 class="content-title">Rock Paper Scissor</h4>
                           <p class="content-text">HTML & CSS -Bootstrap- & Javascript Mini-Game</p>
                       </div>
